--- a/estilo.css
+++ b/estilo.css
@@ -62,34 +62,30 @@
 
 #slider-container {
     overflow: hidden;
-    width: 800px;
+    width: 1358px;
     height: 400px;
     margin: auto;
 }
 
 #slider {
-    transition: transform 0.8s ease-in-out;
-    margin-top: 20px;
-}
-
-#contenedor-productos:only-child .productos {
+    transition: transform 0.5s ease-in-out;
     margin: auto;
-}
-
-#contenedor-productos:nth-child(3):not(:only-child) .productos {
-    justify-content: space-between;
+    display: flex;
+    width: fit-content;
+    justify-content: center;
 }
 
 #anterior,
 #siguiente {
     position: absolute;
-    top: 95%;
+    top: 100%;
     transform: translateY(-50%);
-    margin: 0 250px;
+    margin: 0 28px;
     padding: 10px;
     background-color: springgreen;
     border: 2px solid black;
     font-size: large;
+    cursor: pointer;
 }
 
 #anterior {
@@ -158,6 +154,8 @@ label {
     display: flex;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: medium;
+    align-items: center;
+    margin-top: 30px;
 }
 
 img {
@@ -170,8 +168,7 @@ img {
     max-width: 12rem;
     height: 22rem;
     padding: 5px;
-    margin: 1px;
-    justify-content: center;
+    margin: 0 0 1px 1px;
     object-fit: cover;
     border: 2px solid black;
     background-color: white;
