--- a/carrito.css
+++ b/carrito.css
@@ -1,7 +1,7 @@
 body {
     place-content: center;
     display: grid;
-    background-image: url('https://th.bing.com/th/id/OIP.id6QkT2LodKQs09U8U3b2AHaEt?w=248&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
+    background-image: url('https://th.bing.com/th/id/OIP.z9IUzx227VARcSWehDPihgHaGP?w=225&h=190&c=7&r=0&o=5&dpr=1.3&pid=1.7');
     margin: 0;
     background-color: palegoldenrod;
 }
@@ -11,6 +11,6 @@ body {
     text-align: center;
     margin: 0;
     width: 1484px;
-    background: linear-gradient(slateblue,tomato );
+    background-color: rgb(245, 76, 76);
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
