--- a/ofertas.css
+++ b/ofertas.css
@@ -1,7 +1,7 @@
 body {
     place-content: center;
     display: grid;
-    background-image: url('https://th.bing.com/th/id/OIP.QnPApBBFOg1ogCre4m-CZAAAAA?w=285&h=183&c=7&r=0&o=5&dpr=1.3&pid=1.7');
+    background-image: url('https://th.bing.com/th/id/OIP.pQCMi2tpf2ya4tRgvNy8ZgHaHa?pid=ImgDet&w=207&h=207&c=7&dpr=1,3');
     margin: 0;
 }
 
